Tweak reinterpret to work on scopes